--- a/package.json
+++ b/package.json
@@ -19,11 +19,9 @@
 		"express-ejs-layouts": "^2.5.1",
 		"express-flash": "^0.0.2",
 		"express-session": "^1.17.3",
-		"mysql": "^2.18.1"
-	},
-	"devDependencies": {
-		"@tailwindcss/forms": "^0.5.2",
+		"mysql": "^2.18.1",
 		"concurrently": "^7.2.1",
+		"@tailwindcss/forms": "^0.5.2",
 		"nodemon": "^2.0.16",
 		"tailwindcss": "^3.0.24"
 	},
