updated package.json again

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "app.js",
 	"scripts": {
 		"start": "node app.js",
-		"build": "concurrently \"nodemon app.js\" \"npx tailwindcss -i ./public/assets/css/_style.css -o ./public/assets/css/style.css --watch\""
+		"build": "npx tailwindcss -i ./public/assets/css/_style.css -o ./public/assets/css/style.css",
+		"devStart": "concurrently \"nodemon app.js\" \"npx tailwindcss -i ./public/assets/css/_style.css -o ./public/assets/css/style.css --watch\""
 	},
 	"keywords": [],
 	"author": "Roshane-Johnson",
